2019-07-30      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/Make-lang.in:  add path to doc/include for texi2pod.
	* gm2/gm2.texi:  added information about changing the
	  source file suffix.

2019-07-28      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/Make-lang.in:  add path to doc/include for makeinfo
          and texinfo rules.
	* gm2/gm2.texi:  rewritten title and standard GNU FDL
          copyright as per GCC documentation.
	* gm2/gm2-libs-ch/getopt.c:  changed licence to LGPL 3.
	* gm2/gm2-libs/GetOpt.def:  changed licence to LGPL 3.
	* gm2/gm2-libs/GetOpt.mod:  changed licence to LGPL 3.
	* gm2/gm2-libs/getopt.def:  changed licence to LGPL 3.
	* gm2/Make-lang.in:  (gm2.man) rewritten to use the
          autogenerated version.  (gm2.install-man) rewritten
          to install the autogenerated manual page.  (gm2.pod)
          New rule.
	* gm2/gm2.texi: added more manual page tags so that
	  podman successfully generates a manual page from gm2.texi.

2019-07-25      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/Make-lang.in:  add gm2/gm2-gcc/rtegraph.o and
          plugin/m2rte$(exeext).so to list of dependancies to
          cc1gm2 (stage1, stage2).  make gm2.paranoid fixed.
	* gm2/bnf/gm2m.bnf:  corrected dates.
	* gm2/gm2-compiler/M2ALU.mod:  (InitRecord)
	  call function (UnknownLocation) rather
          than use the address of this function.
	* gm2/gm2-libs-ch/getopt.c:  (getopt_getopt_long)
          use correct paramater specification for longopts.
          (getopt_getopt_long_only) use correct paramater
          specification for longopts.
          (getopt_InitOptions) New function.
	  (getopt_KillOptions)  New function.
          (getopt_SetOption)  New function.
          (getopt_GetLongOptionArray)  New function.
	* gm2/gm2-libs/GetOpt.mod:  (GetOptLongOnly)
          tidied up line wraps.
	* gm2/gm2-libs/getopt.def:  (Options) declared.
          (getopt_long) added comment derived from manual page.